--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  proxy:
+  otomato-proxy:
     build:
       context: ./envoy
       dockerfile: Dockerfile.proxy
@@ -16,14 +16,14 @@ services:
       - "18000:80"
       - "18001:8001"
 
-  web_service:
+  web-service:
     image: otomato/http-echo
     command:
       - '-text="Welcome to WASM land"'
     networks:
       envoymesh:
         aliases:
-          - web_service
+          - web-service
     expose:
       - "5678"
     ports:
