--- a/envoy/Dockerfile.proxy
+++ b/envoy/Dockerfile.proxy
@@ -1,2 +1,2 @@
 FROM envoyproxy/envoy:v1.31-latest
-ENTRYPOINT /usr/local/bin/envoy -c /etc/envoy.yaml -l debug --service-cluster proxy 
+ENTRYPOINT /usr/local/bin/envoy -c /etc/envoy.yaml -l debug --service-cluster otomato-proxy
