--- a/envoy/envoy.yaml
+++ b/envoy/envoy.yaml
@@ -51,7 +51,7 @@ static_resources:
           - endpoint:
               address:
                 socket_address:
-                  address: web_service
+                  address: web-service
                   port_value: 5678
             
 admin:
